--- a/.gitignore
+++ b/.gitignore
@@ -137,7 +137,8 @@ dist/
 downloads/
 eggs/
 .eggs/
-lib/
+# lib/ # フロントエンドのlibディレクトリは含める
+backend/lib/  # バックエンドのlibディレクトリのみ除外
 lib64/
 parts/
 sdist/
