--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -33,5 +33,5 @@ USER app
 
 EXPOSE 8000
 
-# 本番サーバーを起動（マイグレーション + 管理者ユーザー作成後）
-CMD ["sh", "-c", "alembic upgrade head && python create_admin.py && uvicorn main:app --host 0.0.0.0 --port ${PORT:-8000}"]
+# 本番サーバーを起動（テーブル作成 + 管理者ユーザー作成後）
+CMD ["sh", "-c", "python -c 'from models import Base; from database import engine; Base.metadata.create_all(bind=engine)' && python create_admin.py && uvicorn main:app --host 0.0.0.0 --port ${PORT:-8000}"]
